Bug 169980 - FILESAVE: ODP -> PPTX Improper Export of StockChart
Summary: FILESAVE: ODP -> PPTX Improper Export of StockChart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-15 11:25 UTC by Karthik
Modified: 2026-01-12 08:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
ODP File (20.92 KB, application/vnd.oasis.opendocument.presentation)
2025-12-15 11:26 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-12-15 11:25:34 UTC
Description:
Open the attached file and save it as PPTX, the resulting file can't be opened in PowerPoint.

Officeotron gives the below error
ERROR - (ppt/charts/chart1.xml:2 col:5,968) cvc-complex-type.2.4.a: Invalid content was found starting with element 'c:ser'. One of '{"http://schemas.openxmlformats.org/drawingml/2006/chart":dLbls, "http://schemas.openxmlformats.org/drawingml/2006/chart":dropLines, "http://schemas.openxmlformats.org/drawingml/2006/chart":hiLowLines, "http://schemas.openxmlformats.org/drawingml/2006/chart":upDownBars, "http://schemas.openxmlformats.org/drawingml/2006/chart":axId}' is expected.

Steps to Reproduce:
1.Open the attached ODP file
2.Save it as PPTXf
3.Open the resulting file in PowerPoint

Actual Results:
PowerPoint fails to open the file

Expected Results:
PowerPoint opens the file without any problem


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Debian package version: 4:25.2.3-2+deb13u2
Calc: threaded
Comment 1 Karthik 2025-12-15 11:26:34 UTC
Created attachment 204649 [details]
ODP File
Comment 2 Commit Notification 2026-01-06 18:03:34 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1683bb1361c464aa12e63bbfc1bbe2def94505b9

tdf#169980: Fix ODP->PPTX export of stock chart

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-08 11:03:35 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/d4a7e5c7ada7692597f4127e43624419892b7205

tdf#169980: Fix ODP->PPTX export of stock chart

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2026-01-09 14:53:45 UTC
Hi Karthik,
The validation is still failing with the attached document even after you fix, see https://gerrit.libreoffice.org/c/core/+/196932
Comment 5 Commit Notification 2026-01-12 08:45:06 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/ef353879509bc2478adb4e5086a6c4b205edbaa1

tdf#169980: Fix ODP->PPTX export of stock chart

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.