tdf#169980: Fix ODP->PPTX export of stock chart

In OOXML chart export in `c:stockChart` there are multiple `c:ser`
elements with the same `c:idx` value.

Change-Id: Id5c5983118214013a3610ae937b9893c479a0ea0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195657
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit c5b4614b927bd8056995d7d4adb07a4f0c965480)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196543
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196666