include/oox/export/chartexport.hxx
@@ -232,10 +232,9 @@ private:
 
     void exportVaryColors(const css::uno::Reference<css::chart2::XChartType>& xChartType);
     void exportCandleStickSeries(
-        const css::uno::Sequence<
-            css::uno::Reference<
-                css::chart2::XDataSeries > > & aSeriesSeq,
-        bool& rPrimaryAxes );
+        const css::uno::Sequence<css::uno::Reference<css::chart2::XDataSeries>>& aSeriesSeq,
+        bool& rPrimaryAxes, sal_uInt32& nIdx);
+
     void exportSeriesText(
         const css::uno::Reference< css::chart2::data::XDataSequence >& xValueSeq, bool bIsChartex );
     void exportSeriesCategory(
